<resources>
    <string name="app_name">Desafio 2</string>
    <string name="todo">TODO</string>
    <string name="tvTitleText">Calculadora IMC</string>
    <string name="tvAlturaText">Altura</string>
    <string name="tvPesoText">Peso</string>
    <string name="calcular">CALCULAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesoLeve">1-> Inclua mais proteína na dieta.\n\nAs proteínas são indispensáveis ao corpo humano, pois além de contribuírem como fonte energética, são responsáveis pelo crescimento muscular e pela manutenção do organismo. Suas fontes mais ricas são os ovos, o leite, o queijo e as carnes de todos os tipos, porém a melhor opção são as mais magras, grelhadas ou assadas. Enquanto as leguminosas são as melhores fontes de proteína vegetal. Outras fontes vegetais incluem castanhas e nozes. Aumentar o consumo de proteínas leva a um ganho de peso saudável e sustentável\n\n2 -> Fracione as refeições.\n\nÉ importante manter a rotina de fazer três refeições principais por dia —café da manhã, almoço e jantar — e dois lanches intermediários. Dessa forma, aumenta-se a ingestão calórica, dividindo as refeições em maior número. Não é recomendado ficar longos períodos sem se alimentar e é preciso manter o hábito de fazer pequenos lanches entre as refeições. Mas, é importante escolher alimentos saudáveis para esses lanchinhos. Prefira alimentos ricos em fibras, com proteína magra, pães integrais ou frutas, por exemplo\n\n3->Invista em atividades físicas.\n\nAs pessoas magras também precisam se exercitar. A atividade física ajuda a desenvolver massa muscular e consequentemente gera um aumento no peso saudável. Além disso, a prática de atividade física aumenta a disposição e até mesmo a fome. Há várias opções de atividade, mas para quem busca ganhar peso, os exercícios de força, como musculação, são os mais indicados. Mas é importante começar devagar. Uma pessoa sedentária, por exemplo, precisa começar com treinos mais leves, focados em repetições, com mais resistência para depois investir nos treinos de hipertrofia (aumento da massa muscular). É importante sempre ter a orientação de um profissional durante o treino.\n\n4-> Não se esqueça das gorduras boas.\n\nAs gorduras consideradas boas são essenciais para o metabolismo e a manutenção de funções fisiológicas como a síntese de hormônios, e contêm micronutrientes indispensáveis para o ganho de peso. Elas são fontes de energia, além de ajudarem na absorção de vitaminas lipossolúveis (A, D, E e K). Priorize as gorduras insaturadas, presentes em alimentos como azeite, amendoim, abacate, peixes, sementes de linhaça e chia, castanhas, nozes e amêndoas, entre outros.\n\n5->Alie-se aos carboidratos certos.\n\nOs carboidratos complexos são fundamentais para o funcionamento do organismo e trazem muitos benefícios para a saúde. É importante evitar os carboidratos processados, que são menos nutritivos e sempre que possível optar por fontes naturais desse macronutriente. Por isso, vale investir em arroz, pão integral, quinoa, aveia e também alimentos como feijão, lentilha e batata-doce, por exemplo.\n\n6->Fiquei longe do cigarro.\n\nÉ importante manter os hábitos saudáveis mesmo sendo uma pessoa magra, e por isso, é necessário ficar longe do cigarro. Sabe-se que a nicotina ajuda a diminuir o apetite por meio da ativação de um grupo específico de neurônios no cérebro. Além disso, fumar aumenta as chances do surgimento de outras doenças como câncer.\n\n7-> Evite junk food.\n\n É necessário ficar longe de fast foods para controlar a ingestão de sódio e evitar o consumo de alimentos processados e ultraprocessados. A recomendação é consumir com bastante moderação frituras e açúcar refinado. Esses alimentos podem até engordar, mas são pobres em nutrientes e levam ao aumento do colesterol ruim.\n\n8-> Mantenha uma rotina e vá devagar.\n\nA maneira mais segura de ganhar peso é mudar os hábitos de forma lenta e seguindo sempre um objetivo. Todos os dias, o corpo queima naturalmente as calorias consumidas e é importante comer um pouco mais de fontes de energia e criar o hábito de ter "excedente" para ganhar peso e músculos saudáveis. </string>
    <string name="pesoNormal">1-> Beba água.\n\nAntes de falar sobre comida, uma dica importantíssima: beba água. Pelo menos dois litros de água, todos os dias, e não vale substituir a água por sucos ou refrigerantes. Estar hidratado é fundamental para todas as funções básicas do organismo.\n\n2-> Mantenha uma dieta balanceada.\n\nO seu corpo também precisa de nutrientes e de energia para continuar funcionando. Uma dieta balanceada é rica em grãos, legumes e verduras, que fornecem as vitaminas e minerais que fazem bem para o nosso organismo, além de permitirem combinações deliciosas. Um prato bem brasileiro com arroz, feijão, salada rica e uma carne magra já é uma excelente opção.E as gorduras? Bem, existem gorduras boas, como os óleos vegetais e a gordura das castanhas e dos peixes. A banha de porco também é uma boa fonte de gordura, especialmente para preparar alimentos fritos. Quanto às carnes vermelhas, você não precisa se privar, mas tente consumir em menor quantidade.Alimentos ultraprocessados como biscoitos recheados, enlatados e macarrões instantâneos geralmente vêm aditivos químicos e muito sódio e açúcar, que se consumidos em excesso podem causar ganho de peso e doenças como o câncer. O ideal é evitá-los sempre que possível.E por falar em sódio, o sal não é um bom amigo para a sua pressão arterial. Evite usar muito sal no preparo dos alimentos, e tente substituí-lo por outros temperos, como ervas, alho e cebola. O sódio também está presente nos salgadinhos, refrigerantes e temperos prontos. Comer também é um momento de prazer, principalmente refeições em família ou com amigos. Por isso, não faz bem a dieta se tornar uma obsessão, que te impeça de curtir o sabor e o tempero de cada alimento. Lembre-se: qualidade de vida também inclui o bem-estar emocional!\n\n3-> Pratique exercício físico\n\nTodo mundo precisa se exercitar, isso você já sabe. O ideal é uma atividade fixa, como a musculação ou um esporte, mas se você não consegue praticar todos os dias, tudo bem.\n\n4->Movimente-se ao longo do dia.\n\nAlém do exercício físico, é muito importante se movimentar durante o dia, em casa ou no trabalho. Faça pausas e levante da cadeira, dê uma volta pelo escritório e faça alguns alongamentos. Esses intervalos fazem bem para o corpo e para a mente, pois também ajudam a organizar os pensamentos.Aproveite os finais de semana para continuar em movimento, ainda que mais leve. Escolha um armário para arrumar ou um quarto para decorar. Manter um hobbie como andar de bicicleta ou caminhar no parque também é uma ótima prática. São atividades que podem ser feitas em família e com amigos, ajudando a manter uma vida saudável e melhorando a sua qualidade de vida.\n\n5->Durma bem\n\nEnquanto você dorme, o seu corpo se recupera do cansaço do dia, repara todas as células que foram danificadas durante as suas atividades e te prepara para o dia seguinte.</string>
    <string name="pesoAcima">1-> Comer devagar e respeitar a saciedade do corpo.\n\nComer devagar permite que o estômago saciado avise ao cérebro que já recebeu comida suficiente. Esse sinal ocorre antes de o estômago estar completamente cheio, e deve ser interpretado como o corpo avisando que já não precisa de mais comida no momento. No entanto, quem tem o hábito de comer rápido não percebe esse sinal de saciedade, além de reduzir o tempo de contato com a comida e o prazer de aproveitar melhor a refeição.\nRespeitar a saciedade é um dos pontos principais para emagrecer e evitar o ganho de peso. Saciar o estômago com alimento ricos em nutrientes e fibras, como verduras, frutas, carnes em geral e gorduras boas, faz com que o metabolismo funcione melhor e mantém a fome longe por mais tempo.\n\n2-> Beber mais água durante o dia.\n\nDeve-se beber muitos líquidos entre as refeições, pois isso irá ajudar diminuir a fome e a retenção de líquidos porque quanto mais água você bebe, mais urina seu corpo produz, e com a sua eliminação também saem as toxinas que prejudicam o emagrecimento.\n\n3-> Fazer algum exercício físico\n\nO tipo do exercício não é o mais importante, mas sim a regularidade da prática, que deve ser feita pelo menos 3 vezes por semana.\n\n4-> Comer de tudo, mas pouca quantidade\n\nO corpo precisa de todos os nutrientes e dietas que proíbem completamente os carboidratos fazem com que o peso aumente novamente pouco tempo depois.\n\n5-> Evitar ficar com muita fome\n\nPassar muitas horas sem comer pode fazer com que você escolha alimentos ruins e ricos em calorias ao invés de preparar uma boa refeição.\n\n6. Anotar tudo o que come\n\nAnotar tudo o que se come ao longo do dia também é uma boa estratégia para emagrecer, pois assim a pessoa consegue ter maior consciência do que se come e, dessa forma, consegue identificar erros e onde melhorar, podendo alterar os seus hábitos alimentares para emagrecer, caso seja esse o desejo, e ter uma vida mais saudável.\nÉ recomendado que o registro seja feito diariamente e após cada refeição, pois assim é mais fácil de lembrar o que foi consumido. No diário alimentar é importante estar indicado qual o tipo de refeição, se almoço, café da manhã, lanche ou jantar, a hora da refeição, os alimentos consumidos e quantidade, onde aconteceu a refeição e se estava fazendo algo no momento. Além disso, deve-se registrar com quem foi feita a refeição e qual o humor daquele momento. Esse registro deve ser feito por 3 a 7 dias, pois assim é possível ter uma melhor ideia de quais são os hábitos alimentares. Veja como fazer o diário alimentar.</string>
</resources>