<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        android:textColor="@color/blueDark"
        android:layout_marginTop="-500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/blueDark"
        android:background="@drawable/ic_triangulo"
        android:rotation="180"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-20dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAlturaText"
        android:textSize="40sp"
        android:textColor="@color/whiteIce"
        android:layout_marginTop="-100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/sbProgressHeight"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/whiteIce"
        android:progressTint="@color/whiteIce"
        android:progress="@integer/material_motion_duration_short_1"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/custom_thumb"
        android:max="250"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPesoText"
        android:textSize="40sp"
        android:textColor="@color/whiteIce"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/sbProgressWeight"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/whiteIce"
        android:progressTint="@color/whiteIce"
        android:progress="@integer/material_motion_duration_long_2"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/custom_thumb"
        android:max="20000"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btResult"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/whiteIce"
        android:layout_marginTop="500dp"
        android:background="@drawable/circle_button"
        android:text="@string/calcular"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>